# grpc-rust-poc

./: readme.md
client/: Cargo.toml  build.rs
client/src/: client.rs
server/: Cargo.toml  build.rs
server/proto/: greet.proto  say.proto
server/src/: server.rs
